pre_assignment_complete

--- a/pre_assignment/Pandas/Pandas Quiz-문제.ipynb
+++ b/pre_assignment/Pandas/Pandas Quiz-문제.ipynb
@@ -403,7 +403,7 @@
    "source": [
     "# 데이터 출처 : https://www.kaggle.com/code/youngprize33/py-pandas-tutorial/input?select=games.csv\n",
     "# lol.csv 파일을 불러와서 df 변수에 저장합니다.\n",
-    "df = \n",
+    "df = pd.read_csv(\"./lol.csv\")\n",
     "df"
    ]
   },
@@ -629,7 +629,7 @@
     }
    ],
    "source": [
-    "df."
+    "df.head(5)"
    ]
   },
   {
@@ -658,7 +658,7 @@
     }
    ],
    "source": [
-    "df."
+    "df.columns[5]"
    ]
   },
   {
@@ -687,7 +687,7 @@
     }
    ],
    "source": [
-    "df."
+    "df[df.columns[5]].dtype"
    ]
   },
   {
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ba145f42",
    "metadata": {},
    "outputs": [
@@ -713,7 +713,7 @@
     }
    ],
    "source": [
-    "print(df.)"
+    "print(df.firstBlood[2])"
    ]
   },
   {
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "4710ffbc",
    "metadata": {},
    "outputs": [
@@ -751,13 +751,13 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df."
+    "df.columns[df.dtypes=='int64']"
    ]
   },
   {
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "4ca15478",
    "metadata": {},
    "outputs": [
@@ -1070,13 +1070,13 @@
        "[8 rows x 61 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df."
+    "df[df.columns[df.dtypes=='int64']].describe()"
    ]
   },
   {
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "f8600e03",
    "metadata": {},
    "outputs": [
@@ -1119,14 +1119,14 @@
     "print(df,end='\\n\\n')\n",
     "def f1(x): # f1(x)를 구현하세요.\n",
     "    \n",
-    "    return x.\n",
+    "    return x.split(\" \")[0]\n",
     "\n",
     "\n",
     "df['Argument'] = df['Description'].map(f1) # get the first word\n",
     "\n",
     "def f2(x): # f2(x)를 구현하세요.\n",
     "    \n",
-    "    return \n",
+    "    return \" \".join(x.split(\" \")[1:])\n",
     "\n",
     "df['Description'] = df['Description'].map(f2) # remove the first word\n",
     "\n",
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "dde964f7",
    "metadata": {},
    "outputs": [
@@ -1190,15 +1190,15 @@
     "print('Original DataFrame')\n",
     "print(data, end='\\n\\n')\n",
     "\n",
-    "cleaned = data.\n",
+    "cleaned = data.dropna()\n",
     "print('결측값을 제거하세요')\n",
     "print(cleaned, end='\\n\\n')\n",
     "\n",
-    "filled = data.\n",
+    "filled = data.fillna(0)\n",
     "print('결측값을 0으로 채우세요.')\n",
     "print(filled, end='\\n\\n')\n",
     "\n",
-    "filled2 = data.\n",
+    "filled2 = data.fillna({1:0.5, 2:1})\n",
     "print('컬럼 1의 결측값은 0.5, 컬럼 2의 결측값은 1로 채우세요')\n",
     "print(filled2, end='\\n\\n')"
    ]
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "24e485cb",
    "metadata": {},
    "outputs": [
@@ -1324,7 +1324,7 @@
        "max       2.959196     2.921331     2.703505     3.462036"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "5542aa18",
    "metadata": {},
    "outputs": [
@@ -1482,7 +1482,7 @@
        "992  2.697077  0.774417  1.264697  1.896905"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1491,17 +1491,9 @@
     "print('\"0\" 컬럼의 값이 -2.5보다 작거나 2.5보다 큰 row만 남깁니다.')\n",
     "################\n",
     "# 필터링을 해주세요.\n",
-    "\n",
+    "data[(data['0']  < -2.5) | (data['0'] > 2.5)]\n",
     "################"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23ce4090",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
