--- a/pre_assignment/Numpy/Numpy Quiz-문제.ipynb
+++ b/pre_assignment/Numpy/Numpy Quiz-문제.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "186a443c",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "z = np.\n",
+    "z = np.arange(10, 50)\n",
     "print(z)"
    ]
   },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "f78638fa",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
     }
    ],
    "source": [
-    "z = \n",
+    "z = np.flip(z)\n",
     "print(z)"
    ]
   },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "fcf79ba9",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "z = \n",
+    "z = np.reshape(z, (10,4))\n",
     "print(z)"
    ]
   },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "0b0944c7",
    "metadata": {},
    "outputs": [
@@ -121,13 +121,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([0, 1, 2, 4, 6]),)\n"
+      "(array([0, 1, 2, 4, 6], dtype=int64),)\n"
      ]
     }
    ],
    "source": [
     "x = np.array([5,6,8,0,1,0,7])\n",
-    "nz_idx =\n",
+    "# nz_idx = np.where(x != 0)\n",
+    "nz_idx = np.nonzero(x)\n",
     "print(nz_idx)"
    ]
   },
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "c5dade12",
    "metadata": {},
    "outputs": [
@@ -217,7 +218,8 @@
     "print(x, end='\\n\\n')\n",
     "###############\n",
     "# 슬라이싱을 사용하세요\n",
-    "\n",
+    "x[1::2, ::2] = 1\n",
+    "x[::2, 1::2] = 1\n",
     "\n",
     "###############\n",
     "print(x)"
@@ -233,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "fe6834dd",
    "metadata": {},
    "outputs": [
@@ -241,24 +243,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 1 0 1 0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0 1 0 1 0]\n",
-      " [0 1 0 1 0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0 1 0 1 0]\n",
-      " [0 1 0 1 0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0 1 0 1 0]\n",
-      " [0 1 0 1 0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0 1 0 1 0]\n",
-      " [0 1 0 1 0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0 1 0 1 0]\n",
-      " [0 1 0 1 0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0 1 0 1 0]]\n"
+      "[[0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0.]\n",
+      " [0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1.]\n",
+      " [1. 0. 1. 0. 1. 0. 1. 0. 1. 0. 1. 0.]]\n"
      ]
     }
    ],
    "source": [
-    "x = \n",
+    "# x = np.tile(x, (1, 1))\n",
+    "x = np.tile([[0., 1.], [1.,0.]], (6,6))\n",
     "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "239a670c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0., ..., 1., 0., 1.],\n",
+       "       [1., 0., 1., ..., 0., 1., 0.],\n",
+       "       [0., 1., 0., ..., 1., 0., 1.],\n",
+       "       ...,\n",
+       "       [1., 0., 1., ..., 0., 1., 0.],\n",
+       "       [0., 1., 0., ..., 1., 0., 1.],\n",
+       "       [1., 0., 1., ..., 0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
    ]
   },
   {
@@ -271,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "bd215833",
    "metadata": {},
    "outputs": [
@@ -289,7 +319,8 @@
     "print(x)\n",
     "##################\n",
     "# 필터링을 사용하세요.\n",
-    "\n",
+    "idx = np.where((x >= 5) & (x <= 10))\n",
+    "x[idx] = 0\n",
     "\n",
     "##################\n",
     "print(x)"
@@ -305,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "id": "88e38f0e",
    "metadata": {},
    "outputs": [
@@ -319,7 +350,7 @@
     }
    ],
    "source": [
-    "x =\n",
+    "x = np.linspace(0, 100, 10)\n",
     "print(x)"
    ]
   },
@@ -333,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "id": "56449e50",
    "metadata": {},
    "outputs": [
@@ -349,7 +380,7 @@
     "A = np.array([1e10,1e-8])\n",
     "B = np.array([1.00001e10,1e-9])\n",
     "\n",
-    "equal = \n",
+    "equal = np.allclose(A, B)\n",
     "print(equal)"
    ]
   },
@@ -363,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "id": "4136e249",
    "metadata": {},
    "outputs": [
@@ -371,35 +402,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.03420121 0.59679247]\n",
-      " [1.07051166 0.92941267]\n",
-      " [0.91208375 1.43904283]\n",
-      " [0.60518691 1.3606472 ]\n",
-      " [1.13624454 0.66692838]\n",
-      " [1.04951832 0.95618812]\n",
-      " [0.88019332 0.2965659 ]\n",
-      " [0.93300926 0.05579026]\n",
-      " [1.05163631 0.61874614]\n",
-      " [0.42509465 0.15161589]]\n"
+      "[[1.09002033 1.09100305]\n",
+      " [0.76023384 1.18859033]\n",
+      " [1.1168948  0.54175225]\n",
+      " [0.4514373  0.95752961]\n",
+      " [0.8166032  0.08147096]\n",
+      " [0.95157396 1.07261837]\n",
+      " [1.2395832  0.75869747]\n",
+      " [0.22916704 0.64814044]\n",
+      " [0.97516344 1.3671637 ]\n",
+      " [0.49900702 1.37402233]]\n"
      ]
     }
    ],
    "source": [
     "coord = np.random.random((10,2))\n",
     "x, y = coord[:,0], coord[:,1]\n",
-    "r = \n",
-    "theta = \n",
+    "r = np.sqrt(x**2 + y**2)\n",
+    "theta = np.arctan2(y, x)\n",
     "ploar_coord = np.concatenate([r[:,np.newaxis], theta[:,np.newaxis]],axis=1)\n",
     "print(ploar_coord)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40708824",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
